--- a/app/globals.css
+++ b/app/globals.css
@@ -443,3 +443,27 @@ html.skin-citizen-dark .card-icon {
   overflow: hidden;
   margin-top: 0;
 }
+
+/* References */
+ol {
+  list-style-type: decimal;
+  padding-left: 1.5rem;
+}
+
+li {
+  margin-top: 0.7rem;
+  padding-left: 0.5rem;
+}
+
+li:target,
+sup:target {
+  background-color: rgba(62, 91, 193, 0.3);
+}
+
+cite {
+  font-style: normal !important;
+}
+
+li a {
+  color: #3E5BC1;
+}
