--- a/app/globals.css
+++ b/app/globals.css
@@ -309,6 +309,7 @@ div.skeleton-wrap {
     margin: .5em;
     margin-left: 0.3em;
     margin-top: -1em;
+    padding-bottom: 0.2em;
   }
 
   .card-content img {
